dev environment fix

--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
     </header>
     <div class="container">
         <div class="video-section">
-          <iframe src="/stream" scrolling="no" allowfullscreen></iframe>
+          <iframe scrolling="no" allowfullscreen></iframe>
         </div>
         <div class="chat-section">
             <div class="chat-messages">
