--- a/src/main/index.html
+++ b/src/main/index.html
@@ -7,7 +7,12 @@
 </head>
 <body>
     <header>
+        <div class="header-left"></div>
         <h1>Blyat` TV</h1>
+        <div class="username-container">
+            <input type="text" placeholder="Enter your username">
+            <button>Update Username</button>
+        </div>
     </header>
     <div class="container">
         <div class="video-section">
