admin page with login

--- a/src/admin/index.html
+++ b/src/admin/index.html
@@ -19,6 +19,10 @@
             </div>
             <div class="time-container container">
                 <p>time</p>
+                <div class="status-container">
+                    <span>live</span>
+                    <span class="dot red"></span>
+                </div>
             </div>
         </div>
     </div>
