wOw - devServer removed - Admin page, IP in chat - Hide chat button - iPhone height fix - full WebSocket chat - npm updated

--- a/src/login/index.html
+++ b/src/login/index.html
@@ -76,6 +76,12 @@
             margin-top: 5px;
             padding: 10px;
         }
+
+        @media (max-width: 600px) {
+            .container input {
+                width: auto;
+            }
+        }
     </style>
 </head>
 
