--- a/src/main/index.html
+++ b/src/main/index.html
@@ -12,6 +12,7 @@
         <div class="username-container">
             <input type="text" placeholder="Enter your username">
             <button>Update Username</button>
+            <button class="toggle-chat">Hide Chat</button>
         </div>
     </header>
     <div class="container">
