--- a/src/admin/index.html
+++ b/src/admin/index.html
@@ -10,14 +10,24 @@
 <body>
     <h1>Stream Status</h1>
     <div class="main">
-        <div class="connections-container container flex-container">
-            <ul id="connections"></ul>
+        <div class="left-container">
+            <div class="flex-container buttons-container">
+                <button>Show Stream Player</button>
+            </div>
+            <div class="flex-container video-container">
+                <div class="video-section">
+                    <iframe scrolling="no" allowfullscreen></iframe>
+                </div>
+            </div>
+            <div class="flex-container connections-container">
+                <ul id="connections"></ul>
+            </div>
         </div>
-        <div class="chat-container container flex-container">
+        <div class="flex-container chat-container">
             <div class="chat-messages">
                 <!-- Chat messages will go here -->
             </div>
-            <div class="time-container container">
+            <div class="container time-container">
                 <p>time</p>
                 <div class="status-container">
                     <span>live</span>
